# adventoofcode2021

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  day01.py  day02.py  day03.py  pyproject.toml
adventofcode2021/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py
